syntax = "proto3";
package DomainServices.DocumentOnSAService.GetDocumentsToSignList;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";
import "DocumentOnSAToSign.proto";

message GetDocumentsToSignListRequest {
	int32 SalesArrangementId = 1;
}

message GetDocumentsToSignListResponse {
	repeated DocumentOnSAToSign DocumentsOnSAToSign = 1;
}